# accessible_reader

./: .gitignore  AGENTS.md  BUILD_BRIEF.md  README.md  agent.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  benchmarks.py  browser_context.py  bulk_import.py  config.py  ids.py  knowledge.py  main.py  models.py  parsers.py  portability.py  previews.py  recall.py  reflow.py  storage.py  study.py  text_utils.py  transforms.py  variant_contract.py  web_import.py
backend/tests/: test_api.py  test_benchmarks.py  test_contract_inventory.py  test_parsers.py  test_reflow.py
docs/: ROADMAP.md  ROADMAP_ANCHOR.md  assumptions-log.md  backlog.md  decision-log.md  future_integration_accessibility.md  future_integration_tablet.md  repo-fit-log.md  risk-log.md
docs/architecture/: accessible-reader-api-types-contract-audit.md  accessible-reader-generated-type-feasibility.md  accessible-reader-modernization-health.md
docs/assistant/: APP_KNOWLEDGE.md  BROWSER_BRIDGE.md  CAPABILITY_DISCOVERY.md  DIAGNOSTICS.md  EVALUATION.md  HARNESS_PROFILE.json  HOST_INTEGRATION.md  INDEX.md  ISSUE_MEMORY.md  LOCAL_ENVIRONMENT.md  QA_CHECKS.md  RELEASE_CHECKLIST.md  SAFE_COMMANDS.md  START_HERE.md  TERMS_IN_PLAIN_ENGLISH.md  manifest.json
docs/research_notes/: 2026-03-13_stage0_research_brief.md
docs/ux/: recall_benchmark_matrix.md
extension/: .gitignore  README.md  build.mjs  package-lock.json  package.json  tsconfig.json
extension/src/: background.ts  (+9 more)
frontend/: index.html  package-lock.json  package.json
scripts/: ensure_wsl_ready.ps1  open_recall_app.ps1
(+2068 files in other folders)
